--- a/master-java7/pom.xml
+++ b/master-java7/pom.xml
@@ -1,27 +1,66 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-	<groupId>com.github.nicosensei</groupId>
-	<artifactId>maven-master</artifactId>
-	<version>1.0.0</version>
-  </parent>  
-  <artifactId>master-java7</artifactId>
-  <packaging>pom</packaging>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	<parent>
+		<groupId>com.github.nicosensei</groupId>
+		<artifactId>maven-master</artifactId>
+		<version>1.0.0</version>
+	</parent>
+	<artifactId>master-java7</artifactId>
+	<packaging>pom</packaging>
+
+	<name>master-Java7</name>
+	<description>Master Maven POM for Java 7 projects</description>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+
+	<url>https://github.com/nicosensei/mavenmaster</url>
+
+	<scm>
+        <connection>scm:git:git@github.com:nicosensei/mavenmaster.git</connection>
+        <developerConnection>scm:git:git@github.comnicosensei/mavenmaster.git</developerConnection>
+        <url>git@github.com:nicosensei/mavenmaster.git</url>
+    </scm>
+
+	<developers>
+		<developer>
+			<id>nicosensei</id>
+			<name>Nicolas Giraud</name>
+			<email>nicosensei@gmail.com</email>
+			<url>https://github.com/nicosensei/</url>
+			<organization></organization>
+			<organizationUrl></organizationUrl>
+			<roles>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>+2</timezone>
+			<properties>
+				<picUrl>http://www.gravatar.com/avatar/47746431815dd39bcdb03ba399109ef6.png</picUrl>
+			</properties>
+		</developer>
+	</developers>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
